# polisim

./: .claude_mcp_config.json  .env.example  .gitignore  .markdownlint.json  00_START_HERE.md  API_DOCUMENTATION.md  CAROUSEL_BEFORE_AFTER.md  CAROUSEL_COMPLETION.md  CAROUSEL_DELIVERY_SUMMARY.md  CAROUSEL_DOCUMENTATION_INDEX.md  CAROUSEL_FEATURES.md  CAROUSEL_LAYOUT_REORGANIZATION.md  CAROUSEL_QUICKSTART.md  CAROUSEL_README.md  CBO_2_0_IMPLEMENTATION.md  CBO_2_0_ROADMAP.md  CBO_2_0_VISION.md  CBO_INTEGRATION_COMPLETE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_AUDIT_REPORT.md  CONSOLIDATION_COMPLETE.md  CONTRIBUTING.md  DASHBOARD_QUICKSTART.md  DASHBOARD_VS_TKINTER.md  Dockerfile  Dockerfile.dashboard  EXHAUSTIVE_INSTRUCTION_MANUAL.md  Economic_projector.py  Economic_projector_backup.py  F5_DEBUGGING_GUIDE.md  F5_TESTING_FIXED.md  FAQ.md  FINAL_STATUS.md  INDEX.md  LATEST_UPDATES.md  LAYOUT_REORGANIZATION_COMPLETE.md  LICENSE  MCP_INTEGRATION.md  MCP_SETUP.md  PHASE_1_DELIVERED.md  (+40 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.streamlit/: config.toml
api/: __init__.py  auth.py  auth_audit.py  chat_actions.py  chat_agent_participation.py  chat_api.py  chat_mcp_tools.py  chat_models.py  chat_websocket.py  circuit_breaker.py  client.py  config_manager.py  database.py  health_monitoring.py  jwt_manager.py  models.py  observability.py  rate_limiter.py  rbac.py  request_validator.py  rest_server.py  secret_rotation.py  secrets_manager.py  sentry_integration.py  session_manager.py  streaming_integration.py  telemetry.py  v1_middleware.py  validation_models.py  websocket_server.py
core/: README.md  __init__.py  cbo_data_cache.json  cbo_data_history.json  cbo_scraper.py  combined_outlook.py  comparison.py  config.py  context_aware_healthcare.py  data_loader.py  discretionary_spending.py  economic_engine.py  economics.py  edge_case_handlers.py  healthcare.py  interest_spending.py  medicare_medicaid.py  metrics.py  monte_carlo_scenarios.py  pdf_policy_parser.py  phase2_integration.py  phase2_validation.py  policies.py  policy_builder.py  policy_context_framework.py  policy_enhancements.py  policy_mechanics_builder.py  policy_mechanics_extractor.py  report_charts.py  report_generator.py  revenue_modeling.py  scenario_loader.py  simulation.py  social_security.py  tax_reform.py  validation.py
deployment/: DOCKER_DEPLOYMENT.md  nginx.conf
docs/: API_ENDPOINTS.md  API_QUICK_START.md  CHAT_INFRASTRUCTURE.md  DASHBOARD_FIX_SUMMARY.md  EXTRACTION_IMPLEMENTATION_COMPLETE.md  EXTRACTION_ROADMAP.md  GITHUB_DISCUSSIONS_SETUP.md  GLOSSARY.md  IMPLEMENTATION_PROGRESS.md  INCIDENT_RESPONSE.md  LAUNCHER_GUIDE.md  MONITORING_COMPLIANCE.md  Makefile  (+17 more)
(+309 files in other folders)
