[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "polisim"
version = "0.1.0"
description = "Government-grade policy simulator for economic projections with Monte Carlo modeling"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Galactic Org of Development", email = "dev@galacticorgofdev.com"}
]
keywords = ["policy", "simulation", "economics", "monte-carlo", "healthcare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Government",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Policy Makers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]

dependencies = [
    "pandas==2.2.3",
    "numpy==2.1.3",
    "scipy==1.15.2",
    "openpyxl==3.1.5",
    "matplotlib==3.10.1",
    "PyYAML==6.0.2",
    "pypdf==6.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-timeout==2.4.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
streamlit = [
    "streamlit>=1.28",
]
fastapi = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.urls]
Homepage = "https://github.com/GalacticOrgOfDev/polisim"
Repository = "https://github.com/GalacticOrgOfDev/polisim"
Documentation = "https://github.com/GalacticOrgOfDev/polisim/blob/main/00_START_HERE.md"
Issues = "https://github.com/GalacticOrgOfDev/polisim/issues"

[tool.setuptools]
packages = ["core", "ui", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -n auto"
python_files = "test_*.py"
markers = [
    "slow: marks tests as slow/resource-intensive (deselect with '-m \"not slow\"')",
    "stress: marks tests as stress tests with high iteration counts",
    "integration: marks tests as integration tests",
    "asyncio: marks tests as async tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:plotly.io._kaleido",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.isort]
profile = "black"
line_length = 100
